# WizDetention

./: LICENSE  MANIFEST.in  README.md  constants.py  game.py  installer.cfg  menu_screen.py  open_window.py  pyproject.toml  requirements.txt  setup.py
Maps/: Level_0.tiled-session
src/: constants.py  env_interaction.py  game.py  menu_screen.py  open_window.py  quit_screen.py
src/Assets/Maps/: Acid_TS.tsx  Dungeon_Tiles_BG.tsx  Level_0_map.json  Level_0_map.tmx  Level_1_map.json  Level_1_map.tmx  Level_2_map.json  Level_2_map.tmx  Level_3_map.json  Level_map_template.tmx  banner.tsx  bookcases.tsx  button_TS.tsx  candles.tsx  cobwebs.tsx  door_TS.tsx  junk01.tsx  level_3_map.tmx  skulls.tsx  torches.tsx
src/Maps/: Dungeon_Tiles_TS_1.tsx
src/Wizard-Detention/: command.py  constants.py  env_interaction.py  game.py  menu_screen.py  open_window.py  quit_screen.py
src/Wizard-Detention/Assets/Maps/: Level_0_map.json  Level_0_map.tmx  Moving_Platforms_TS.tsx
